--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - "5434:5432"
       volumes:
         - postgres_data:/var/lib/postgresql/data/
+        - ./initdb:/docker-entrypoint-initdb.d
       restart: always
       networks:
         - red_prueba
