actualizado credenciales DB prod

--- a/.env_prod
+++ b/.env_prod
@@ -1,8 +1,8 @@
 SECRET_KEY='django-insecure-+=#u%df0=nm3w!t)_cjm)v(m6x@)a1d#^r$l%th3rnf=e18=s@'
-DB_NAME=llm
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_HOST=10.2.5.3
+DB_NAME=iadata
+DB_USER=ia
+DB_PASSWORD=LKSp2t55iHZ1k9
+DB_HOST=10.2.102.215
 DB_PORT=5432
 DJANGO_SETTINGS_MODULE=llm.settings.prod
 DJANGO_ENV=prod
