--- a/.env_dev
+++ b/.env_dev
@@ -7,5 +7,4 @@ DB_PORT=5432
 DJANGO_SETTINGS_MODULE=llm.settings.dev
 DJANGO_ENV=dev
 BUILD_ENV=dev
-GEONODE_SERVER=https://geonode.dev.geoint.mx
-
+GEONODE_SERVER=https://geonode.dev.geoint.mx/
