--- a/.env_dev
+++ b/.env_dev
@@ -8,3 +8,7 @@ DJANGO_SETTINGS_MODULE=llm.settings.dev
 DJANGO_ENV=dev
 BUILD_ENV=dev
 GEONODE_SERVER=https://geonode.dev.geoint.mx/
+
+OLLAMA_PROTO=http
+OLLAMA_HOST=ollama
+OLLAMA_PORT=11434
