--- a/.env_prod
+++ b/.env_prod
@@ -8,3 +8,7 @@ DJANGO_SETTINGS_MODULE=llm.settings.prod
 DJANGO_ENV=prod
 BUILD_ENV=prod
 GEONODE_SERVER=http://10.2.102.99
+
+OLLAMA_PROTO=http
+OLLAMA_HOST=ollama
+OLLAMA_PORT=11434
