precarga modelo llm en prod, agregado url de geonode en .env_prod

--- a/.env_prod
+++ b/.env_prod
@@ -7,4 +7,4 @@ DB_PORT=5432
 DJANGO_SETTINGS_MODULE=llm.settings.prod
 DJANGO_ENV=prod
 BUILD_ENV=prod
-GEONODE_SERVER=http://10.2.102.99
+GEONODE_SERVER=https://geonode.dev.geoint.mx
