--- a/.env_prod
+++ b/.env_prod
@@ -7,8 +7,9 @@ DB_PORT=5432
 DJANGO_SETTINGS_MODULE=llm.settings.prod
 DJANGO_ENV=prod
 BUILD_ENV=prod
+GEONODE_SERVER=https://geonode.dev.geoint.mx/
 
 OLLAMA_PROTO=http
 OLLAMA_HOST=ollama
 OLLAMA_PORT=11434
-GEONODE_SERVER=https://geonode.dev.geoint.mx
+
