actualización de docker-compose-prod

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -20,6 +20,37 @@ services:
     networks:
       - red_geolex
 
+  celery:
+    env_file: .env_dev
+    build:
+      context: .
+      args:
+        BUILD_ENV: ${BUILD_ENV:-dev}
+    container_name: modulo-ia-celery
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    volumes:
+      - .:/app
+    depends_on:
+      - db
+    entrypoint: ["celery", "-A", "llm", "worker", "--loglevel=info"]
+    networks:
+      - red_geolex
+    restart: always
+  
+  redis:
+    image: redis:latest
+    container_name: modulo-ia-redis
+    volumes:
+      - ./scripts/redis-entrypoint.sh:/usr/local/bin/redis-entrypoint.sh:ro
+    entrypoint: ["/usr/local/bin/redis-entrypoint.sh"]
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    networks:
+      red_geolex:
+        aliases:
+          - redis
+    restart: unless-stopped
   #db:
   #    container_name: modulo-ia-db
   #    image: ankane/pgvector:latest
